--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 Audio example:
+<!-- Local audio file: freepik-dark-ark.mp3 -->
 <audio controls>
-<source src="audio/sample.mp3" type="audio/mpeg" />
+<source src="freepik-dark-ark.mp3" type="audio/mpeg" />
 Your browser does not support the audio element.
 </audio>
 
 Video example:
+<!-- Local video file: 1350205-hd_1920_1080_30fps.mp4 -->
 <video controls width="480">
-<source src="video/demo.mp4" type="video/mp4" />
+<source src="1350205-hd_1920_1080_30fps.mp4" type="video/mp4" />
 Your browser does not support the video tag.
 </video>
